feat: add Repository, update Controller, Model, Service, Templates; Docs: update Readme.md

--- a/haidokter/src/main/resources/templates/delete-obat.html
+++ b/haidokter/src/main/resources/templates/delete-obat.html
@@ -2,10 +2,10 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Delete Resep</title>
+    <title>Delete Obat</title>
 </head>
 <body>
-    <h2 th:text="'Resep dengan nomor resep ' + ${nomorResep} + ' berhasil dihapus. '"></h2>
+    <h2 th:text="'Obat dengan Id ' + ${id} + ' berhasil dihapus. '"></h2>
     <a href="/">Home</a>
 </body>
 </html>
