--- a/haidokter/src/main/resources/templates/viewall-resep.html
+++ b/haidokter/src/main/resources/templates/viewall-resep.html
@@ -13,5 +13,7 @@
         <h3 th:text="'Catatan: '+ ${resep.catatan}"></h3>
         <h3>--------------------------------------------</h3>
     </div>
+    <br>
+    <a href="/">Home</a>
 </body>
 </html>
