feat: update Controller, Model, Templates; Docs: update Readme.md

--- a/haidokter/src/main/resources/templates/add-multiple-obat.html
+++ b/haidokter/src/main/resources/templates/add-multiple-obat.html
@@ -2,12 +2,13 @@
 <html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Update catatan</title>
+    <title>Add obat</title>
     <object th:include="fragments/fragment :: css" th:remove="tag"></object>
     <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
-<nav th:replace="fragments/fragment :: navbar('Update Resep')"></nav>
-    <h2 th:text="'Resep dengan nomor resep ' + ${nomorResep} + ' berhasil diupdate. '"></h2>
+    <nav th:replace="fragments/fragment :: navbar('Add Obat')"></nav>
+    <h2 th:text="${jumlah} + ' obat telah berhasil dibuat. '"></h2>
+<a href="/resep/viewall" class="btn btn-success">Lihat semua resep</a>
 </body>
 </html>
