--- a/haidokter/src/main/resources/templates/add-obat.html
+++ b/haidokter/src/main/resources/templates/add-obat.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Add obat</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+<nav th:replace="fragments/fragment :: navbar('Add Obat')"></nav>
     <h2 th:text="'Obat dengan Id ' + ${id} + ' berhasil ditambahkan. '"></h2>
-    <a href="/">Home</a>
+    <a href="/resep/viewall" class="btn btn-success">Lihat semua resep</a>
 </body>
 </html>
