--- a/haidokter/src/main/resources/templates/add-resep.html
+++ b/haidokter/src/main/resources/templates/add-resep.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Add resep</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+<nav th:replace="fragments/fragment :: navbar('Add Resep')"></nav>
     <h2 th:text="'Resep dengan nomor resep ' + ${nomorResep} + ' berhasil ditambahkan. '"></h2>
-    <a href="/resep/viewall">Kembali</a>
+    <a href="/resep/viewall" class="btn btn-success">Lihat semua resep</a>
 </body>
 </html>
