--- a/haidokter/src/main/resources/templates/delete-resep.html
+++ b/haidokter/src/main/resources/templates/delete-resep.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Delete Resep</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+<nav th:replace="fragments/fragment :: navbar('Delete Resep')"></nav>
     <h2 th:text="'Resep dengan nomor resep ' + ${nomorResep} + ' berhasil dihapus. '"></h2>
-    <a href="/">Home</a>
 </body>
 </html>
