--- a/haidokter/src/main/resources/templates/error-delete-resep.html
+++ b/haidokter/src/main/resources/templates/error-delete-resep.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Error Delete Resep</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+<nav th:replace="fragments/fragment :: navbar('Error')"></nav>
     <h2>Resep gagal untuk dihapus karena masih memiliki obat</h2>
-    <a href="/">Home</a>
 </body>
 </html>
