--- a/haidokter/src/main/resources/templates/form-add-resep.html
+++ b/haidokter/src/main/resources/templates/form-add-resep.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Form add resep</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+<nav th:replace="fragments/fragment :: navbar('Add Resep')"></nav>
 <h2>Hello</h2>
 <h3>Tambah Resep</h3>
 <form th:action="@{/resep/add}" th:object="${resep}" method="POST">
@@ -17,8 +20,7 @@
     Catatan:<br>
     <input type="text" name="catatan"/>
     <br><br>
-    <button type="submit" value="Submit">Submit</button>
+    <button type="submit" value="Submit" class="btn btn-success">Submit</button>
 </form>
-<a href="/">Home</a>
 </body>
 </html>
