--- a/haidokter/src/main/resources/templates/form-update-obat.html
+++ b/haidokter/src/main/resources/templates/form-update-obat.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Form Add Obat</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+<nav th:replace="fragments/fragment :: navbar('Update Resep')"></nav>
 <h3>Ubah Obat</h3>
 <form th:action="@{/obat/change}" th:object="${obat}" method="POST">
     <input type="hidden" th:field="*{id}"/>
@@ -23,7 +26,7 @@
     <input type="number" name="kuantitas" th:value="*{kuantitas}"/>
     <br>
     <br>
-    <button type="submit" value="Submit">Submit</button>
+    <button type="submit" value="Submit" class="btn btn-success">Submit</button>
 </form>
 </body>
 </html>
