--- a/haidokter/src/main/resources/templates/form-update-resep.html
+++ b/haidokter/src/main/resources/templates/form-update-resep.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Update Data Resep</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
+<nav th:replace="fragments/fragment :: navbar('Update Resep')"></nav>
 <h2>Change Data Resep</h2>
 <form th:action="@{/resep/change}" th:object="${resep}" method="POST">
     <input type="hidden" th:field="*{noResep}"/>
@@ -17,8 +20,7 @@
     Catatan: <br>
     <input type="text" name="catatan" th:value="*{catatan}"/>
     <br><br><br>
-    <button type="submit" value="Submit">Submit</button>
-
+    <button type="submit" value="Submit" class="btn btn-success">Submit</button>
 </form>
 </body>
 </html>
