--- a/haidokter/src/main/resources/templates/home.html
+++ b/haidokter/src/main/resources/templates/home.html
@@ -3,21 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <title>Home</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
-<h2>Selamat Datang di HaiDokter!</h2>
-<h3>Tambah Resep</h3>
-<td><a th:href="@{/resep/add}">Tambah Resep</a></td>
+<nav th:replace="fragments/fragment :: navbar('Home')"></nav>
+<div class="container-fluid">
+    <h2>Selamat datang di HaiDokter!</h2>
+    <a th:href="@{/resep/viewall}" class="btn btn-success">Lihat semua resep</a>
+    <a th:href="@{resep/add}" class="btn btn-outline-success">Tambah resep</a>
+    <hr />
+    <div class="row">
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">Cari resep berdasarkan nomor resep</div>
+                <div class="card-body">
+                    <form th:action="@{/resep/view/}" method="GET">
+                        <input
+                                type="text"
+                                class="form-control"
+                                placeholder="Nomor resep"
+                                name="noResep"
+                                required
+                        />
+                        <div class="col">
+                            <button class="btn btn-success btn-block" type="submit">
+                                Cari
+                            </button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+<!--    <h2>Selamat datang di HaiDokter!</h2>-->
+<!--    <h3>Tambah Resep</h3>-->
+<!--    <td><a th:href="@{/resep/add}">Tambah Resep</a></td>-->
 
-<h3>Cari Resep Berdasarkan Nomor Resep</h3>
-<form th:action="@{/resep/view}" method="GET">
-    No Resep: <br>
-    <label>
-        <input type="text" name="noResep"/>
-    </label>
-    <button type="submit">Cari</button>
-</form>
-<br>
-<a href="/resep/viewall">View All</a>
+<!--    <h3>Cari resep berdasarkan nomor resep</h3>-->
+
+<!--    <form th:action="@{/resep/view}" method="GET">-->
+<!--        No Resep:<br>-->
+<!--        <label>-->
+<!--            <input type = "text" name = "noResep"/>-->
+<!--        </label>-->
+<!--        <button type="submit">Cari</button>-->
+<!--    </form>-->
+<!--    <a th:href="@{/resep/viewall}">Lihat semua resep</a>-->
+<!--    <a href="/resep/viewall">Kembali</a>-->
 </body>
 </html>
