--- a/haidokter/src/main/resources/templates/update-obat.html
+++ b/haidokter/src/main/resources/templates/update-obat.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Update obat</title>
+    <object th:include="fragments/fragment :: css" th:remove="tag"></object>
+    <object th:include="fragments/fragment :: js" th:remove="tag"></object>
 </head>
 <body>
-<h2 th:text="'Obat dengan Id ' + ${id} + ' berhasil diupdate. '"></h2>
-<a href="/">Kembali</a>
+    <nav th:replace="fragments/fragment :: navbar('Update Obat')"></nav>
+    <h2 th:text="'Obat dengan Id ' + ${id} + ' berhasil diupdate. '"></h2>
+    <a href="/resep/viewall" class="btn btn-success">Lihat semua resep</a>
 </body>
 </html>
