--- a/haidokter/src/main/resources/templates/fragments/fragment.html
+++ b/haidokter/src/main/resources/templates/fragments/fragment.html
@@ -52,7 +52,7 @@
                 Home<span class="sr-only">(current)</span>
             </a>
         </ul>
-        <ul class="navbar-nav">
+        <ul class="navbar-nav pull-right">
             <a href="#" th:text="${current}"></a>
         </ul>
         <ul class="navbar-nav pull-right">
