--- a/haidokter/src/main/resources/templates/view-resep.html
+++ b/haidokter/src/main/resources/templates/view-resep.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://thymeleaf.org">
+<html lang="en" xmlns:th="http://thymeleaf.org" xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head>
     <meta charset="UTF-8">
     <title>View Resep</title>
@@ -28,9 +28,9 @@
         <h2 th:text="${title}"></h2>
         <form th:action="@{/obat/delete}" th:object="${resep}" method="POST">
             <div class="mb-3">
-                <a th:href="@{/obat/add/} + ${resep.noResep}"
+                <a sec:authorize="hasAuthority('APOTEKER')" th:href="@{/obat/add/} + ${resep.noResep}"
                    class="btn btn-success">Add Obat</a>
-                <a th:href="@{/obat/add-multiple/} + ${resep.noResep}"
+                <a sec:authorize="hasAuthority('APOTEKER')" th:href="@{/obat/add-multiple/} + ${resep.noResep}"
                    class="btn btn-outline-success">Add Multiple Obat</a>
                 <input type="submit"
                        value="Delete yang dipilih"
