--- a/haidokter/src/main/resources/templates/fragments/fragment.html
+++ b/haidokter/src/main/resources/templates/fragments/fragment.html
@@ -40,10 +40,23 @@
                 Home<span class="sr-only">(current)</span>
             </a>
         </ul>
-        <ul class="nav navbar-nav navbar-right">
-            <a th:text="${NamaPage}" class="nav-item nav-link active text-secondary" th:href="@{/}">
-                <span class="sr-only">(current)</span>
+<!--        <ul class="nav navbar-nav navbar-right">-->
+<!--            <a th:text="${NamaPage}" class="nav-item nav-link active text-secondary" th:href="@{/}">-->
+<!--                <span class="sr-only">(current)</span>-->
+<!--            </a>-->
+<!--        </ul>-->
+    </div>
+    <div class="collapse navbar-collapse">
+        <ul class="navbar-nav mr-auto">
+            <a class="nav-item nav-link active text-secondary" th:href="@{/}">
+                Home<span class="sr-only">(current)</span>
             </a>
+        </ul>
+        <ul class="navbar-nav pull-right">
+            <a href="#" th:text="${current}"></a>
+        </ul>
+        <ul class="navbar-nav pull-right">
+            <a class="nav-item nav-link active" th:href="@{/logout}">Logout</a>
         </ul>
     </div>
 </nav>
